<resources>
    <string name="app_name">WanAndroid</string>


    <string name="main_pager">首页</string>
    <string name="hierarchy">体系</string>
    <string name="navigation">导航</string>
    <string name="official_accounts">公众号</string>

    <string name="pls_login">请登录</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_username">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="to_login">去登录</string>
    <string name="to_register">去注册</string>
    <string name="register_content_not_null">用户名、密码都不能为空</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="dialog_title">标题</string>
    <string name="dialog_content">内容</string>
    <string name="are_you_sure_to_logout">确定退出登录？</string>
    <string name="my_like">我的收藏</string>
    <string name="reading_history">阅读历史</string>
    <string name="system_setting">系统设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="carousel">显示轮播</string>
    <string name="clear_cache">清除缓存</string>
    <string name="version_info">版本信息</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于作者</string>
    <string name="logout">退出登录</string>

    <string name="register_success">注册成功，请登录</string>
    <string name="login_success">登录成功</string>

    <string name="request_success">请求成功</string>
    <string name="login_first">请先登录</string>
    <string name="request_result_null">请求结果为空</string>
    <string name="request_other_error">请求错误：%s</string>

    <string name="banner_title">Banner图title</string>
    <string name="banner_title_number"><![CDATA[&#188;]]></string>
    <string name="top">置顶</string>
    <string name="new_article">新文章</string>
    <string name="search_hint">用多个空格隔开多个关键词</string>

    <string name="search_text">搜索</string>
    <string name="search_hot_key">热门搜索</string>
    <string name="search_history">历史搜索</string>

    <string name="collect_success">收藏成功</string>
<!--    <string name="collect_failed">收藏失败:</string>-->
    <string name="un_collect_success">取消收藏成功</string>
<!--    <string name="un_collect_failed">取消收藏失败:</string>-->
<!--    <string name="collect_list_failed">收藏列表获取失败:</string>-->

    <string name="wait">敬请期待…</string>

    <string name="want_say">新手一枚，本APP权做练习使用，UI风格比较随意，功能不断完善升级中。\n若是喜欢，可持续关注。</string>
    <string name="blog">博客</string>
    <string name="git">github</string>
    <string name="author_name">lyl0530</string>

    <string name="back">回退</string>

    <string name="ssl_cer_err">SSL证书错误</string>
    <string name="go_on">继续</string>
</resources>
