<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="20dp"
    android:minWidth="300dp"
    android:padding="15dp">

    <TextView
        android:id="@+id/title"
        android:text="@string/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:text="@string/dialog_content"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/little_black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:background="@drawable/selector_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_dialog_button"
            android:layout_marginEnd="5dp" />

        <Button
            android:text="@string/sure"
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_dialog_button"
            android:layout_marginEnd="5dp" />
    </LinearLayout>

</LinearLayout>
