<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/login_bg_shape">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBarH"
        android:background="@color/colorPrimary"
        android:id="@+id/login_title">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_title_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/titleLeftMargin"
            android:onClick="onBack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textSize="@dimen/titleTextSize"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_register"
        android:layout_below="@id/login_title"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/to_register"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/normal"
        android:layout_centerHorizontal="true"
        android:drawableEnd="@drawable/ic_pri_1"
        android:gravity="center"
        android:paddingStart="18dp"
        android:id="@+id/tv_register"
        android:visibility="visible"
        tools:ignore="RtlSymmetry"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_80"
        android:paddingTop="3dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/to_login"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/normal"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_80"
        android:drawableStart="@drawable/ic_next_1"
        android:id="@+id/tv_login"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:gravity="center"
        android:paddingEnd="18dp"
        tools:ignore="RtlSymmetry"
        android:paddingTop="3dp"
        />
</RelativeLayout>